Bug 806596 - Don't fire double tap if the delayed task to timeout the 1st tap fails to run in time. r=roc